[gd_scene load_steps=18 format=3 uid="uid://c0pi1kwpiy6mi"]

[ext_resource type="Texture2D" uid="uid://b5h8ofbfo1ib1" path="res://assets/UI assets/help_background.png" id="1_uhmvk"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_ynkvx"]
[ext_resource type="Texture2D" uid="uid://cgbhchto4t2fo" path="res://assets/UI assets/music_button.png" id="3_hfqr6"]
[ext_resource type="Script" path="res://scenes/buttonToggleSound.gd" id="4_ccukh"]
[ext_resource type="Texture2D" uid="uid://1hkiby8n0jtf" path="res://assets/UI assets/sfx_button.png" id="4_ey1g2"]
[ext_resource type="AudioStream" uid="uid://cuaryq32hikv8" path="res://assets/chipsCollide1.ogg" id="4_mksqr"]
[ext_resource type="AudioStream" uid="uid://chvyi1hyt12aw" path="res://assets/chipsCollide2.ogg" id="5_4k31q"]
[ext_resource type="AudioStream" uid="uid://dl6r5i82we6ww" path="res://assets/chipsCollide3.ogg" id="6_56r6r"]
[ext_resource type="AudioStream" uid="uid://bx2dhkeybwg3f" path="res://assets/chipsCollide4.ogg" id="7_yw1gj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dpo5a"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_uhmvk")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nqlnb"]
atlas = ExtResource("3_hfqr6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4os6y"]
atlas = ExtResource("3_hfqr6")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tp58y"]
streams_count = 4
stream_0/stream = ExtResource("4_mksqr")
stream_1/stream = ExtResource("5_4k31q")
stream_2/stream = ExtResource("6_56r6r")
stream_3/stream = ExtResource("7_yw1gj")

[sub_resource type="AtlasTexture" id="AtlasTexture_trwil"]
atlas = ExtResource("4_ey1g2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkv6n"]
atlas = ExtResource("4_ey1g2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6g14k"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_uhmvk")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nsjlx"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_uhmvk")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
modulate_color = Color(0.386251, 0.386251, 0.386251, 1)

[node name="optionsMenu" type="CanvasLayer"]
script = ExtResource("1_ynkvx")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -54.5
offset_right = 85.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dpo5a")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music"
horizontal_alignment = 1

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer6"]
layout_mode = 2

[node name="musicSlider" type="HSlider" parent="PanelContainer/VBoxContainer/MarginContainer6/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="musicToggleButton" type="TextureButton" parent="PanelContainer/VBoxContainer/MarginContainer6/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_nqlnb")
texture_pressed = SubResource("AtlasTexture_4os6y")
stretch_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PanelContainer/VBoxContainer/MarginContainer6/HBoxContainer/musicToggleButton"]
stream = SubResource("AudioStreamRandomizer_tp58y")
bus = &"SFX"
script = ExtResource("4_ccukh")

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SFX
"
horizontal_alignment = 1

[node name="MarginContainer7" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer7"]
layout_mode = 2

[node name="sfxSlider" type="HSlider" parent="PanelContainer/VBoxContainer/MarginContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="sfxToggleButton" type="TextureButton" parent="PanelContainer/VBoxContainer/MarginContainer7/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_trwil")
texture_pressed = SubResource("AtlasTexture_dkv6n")
stretch_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PanelContainer/VBoxContainer/MarginContainer7/HBoxContainer/sfxToggleButton"]
stream = SubResource("AudioStreamRandomizer_tp58y")
bus = &"SFX"
script = ExtResource("4_ccukh")

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="menuButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxTexture_6g14k")
theme_override_styles/hover = SubResource("StyleBoxTexture_nsjlx")
theme_override_styles/normal = SubResource("StyleBoxTexture_6g14k")
text = "Return to Main Menu"
